2006-10-21  Akim Demaille  <akim.demaille@free.fr>

	utime.hh
	* utime.hh: New, from kernel1/src/console.cc.
	* README: Complete.

2006-10-20  Matthieu Nottale  <nottale@gostai.com>

	typo fix 

	* lockable.hh: Fix typo.

2006-10-18  Akim Demaille  <demaille@gostai.com>

	Avoid warnings for unused arguments
	* lockable.hh: Do that.

2006-10-18  Akim Demaille  <demaille@gostai.com>

	Check if defined before using 
	* lockable.hh: Protect against "undefined macro" warnings.

2006-10-18  Akim Demaille  <demaille@gostai.com>

	Adjust to the current build-aux.
	* lockable.hh: Check URBI_ENV_AIBO.

2006-10-18  Akim Demaille  <demaille@gostai.com>

	r66: Avoid backward compatibility warnings
	* hash.hh: Include ext/hash_map, not hash_map.h.
	* README: More to do.

2006-10-18  Akim Demaille  <demaille@gostai.com>

	* hash.hh: New.
	* README: More doc, more todo.

2006-10-17  Akim Demaille  <demaille@gostai.com>

	Use new HAVE_ symbols.
	* thread.hh: Formatting changes.
	* lockable.hh: Check URBI_AIBO and HAVE_PTHREAD_H.
	* README: More doc.

2006-10-17  Akim Demaille  <demaille@gostai.com>

	semaphore.hh, thread.hh.
	* semaphore.hh: New.
	* thread.hh: New.
	From liburbi-c++/src/liburbi/lockable.h.
	* lockable.hh (LOCKED): New.

2006-10-17  Akim Demaille  <demaille@gostai.com>

	Add lockable.hh.

	* lockable.h: New.
	* README: New.